Address PR comments, add validating webhook and tests.
