# api/openapi-spec/swagger.json
@@ -3989,30 +3989,23 @@
      }
     }
    },
+   "v1.BIOS": {
+    "description": "If set (default), BIOS will be used."
+   },
    "v1.Bootloader": {
-    "description": "Represents the firmware blob used to assist in the domain creation process.\nUsed by Xen fully virtualized domains as well as setting the QEMU BIOS file path for QEMU/KVM domains",
+    "description": "Represents the firmware blob used to assist in the domain creation process.\nUsed for setting the QEMU BIOS file path for the libvirt domain.",
     "required": [
-     "path",
-     "secure",
-     "readonly",
-     "type"
+     "bios",
+     "efi"
     ],
     "properties": {
-     "path": {
-      "description": "The path to the firmware blob",
-      "type": "string"
+     "bios": {
+      "description": "If set (default), BIOS will be used.\n+optional",
+      "$ref": "#/definitions/v1.BIOS"
      },
-     "readonly": {
-      "description": "Should the image be writable or read-only",
-      "type": "boolean"
-     },
-     "secure": {
-      "description": "Some firmwares implements the Secure boot feature",
-      "type": "boolean"
-     },
-     "type": {
-      "description": "Accepts values `rom` or `pflash`; tells the hypervisor where in the guest memory the file should be mapped\nIf the loader points to an UEFI image, `type` should be `pflash`",
-      "type": "string"
+     "efi": {
+      "description": "If set, EFI will be used instead of BIOS.\n+optional",
+      "$ref": "#/definitions/v1.EFI"
      }
     }
    },
@@ -4308,9 +4301,6 @@
      "devices"
     ],
     "properties": {
-     "bootloader": {
-      "$ref": "#/definitions/v1.Bootloader"
-     },
      "clock": {
       "description": "Clock sets the clock and timers of the vmi.\n+optional",
       "$ref": "#/definitions/v1.Clock"
@@ -4346,6 +4336,18 @@
      "resources": {
       "description": "Resources describes the Compute Resources required by this vmi.",
       "$ref": "#/definitions/v1.ResourceRequirements"
+     }
+    }
+   },
+   "v1.EFI": {
+    "description": "If set, EFI will be used instead of BIOS.",
+    "required": [
+     "secure"
+    ],
+    "properties": {
+     "secure": {
+      "description": "Some firmwares implements the Secure boot feature",
+      "type": "boolean"
      }
     }
    },
@@ -4473,6 +4475,10 @@
    },
    "v1.Firmware": {
     "properties": {
+     "bootloader": {
+      "description": "Settings to control the bootloader that is used.\n+optional",
+      "$ref": "#/definitions/v1.Bootloader"
+     },
      "uuid": {
       "description": "UUID reported by the vmi bios.\nDefaults to a random generated uid.",
       "type": "string"
