# pkg/api/v1/deepcopy_generated.go
@@ -29,24 +29,40 @@ import (
 )
 
 // DeepCopyInto is an autogenerated deepcopy function, copying the receiver, writing into out. in must be non-nil.
+func (in *BIOS) DeepCopyInto(out *BIOS) {
+	*out = *in
+	return
+}
+
+// DeepCopy is an autogenerated deepcopy function, copying the receiver, creating a new BIOS.
+func (in *BIOS) DeepCopy() *BIOS {
+	if in == nil {
+		return nil
+	}
+	out := new(BIOS)
+	in.DeepCopyInto(out)
+	return out
+}
+
+// DeepCopyInto is an autogenerated deepcopy function, copying the receiver, writing into out. in must be non-nil.
 func (in *Bootloader) DeepCopyInto(out *Bootloader) {
 	*out = *in
-	if in.Secure != nil {
-		in, out := &in.Secure, &out.Secure
+	if in.BIOS != nil {
+		in, out := &in.BIOS, &out.BIOS
 		if *in == nil {
 			*out = nil
 		} else {
-			*out = new(bool)
+			*out = new(BIOS)
 			**out = **in
 		}
 	}
-	if in.ReadOnly != nil {
-		in, out := &in.ReadOnly, &out.ReadOnly
+	if in.EFI != nil {
+		in, out := &in.EFI, &out.EFI
 		if *in == nil {
 			*out = nil
 		} else {
-			*out = new(bool)
-			**out = **in
+			*out = new(EFI)
+			(*in).DeepCopyInto(*out)
 		}
 	}
 	return
@@ -519,7 +535,7 @@ func (in *DomainSpec) DeepCopyInto(out *DomainSpec) {
 			*out = nil
 		} else {
 			*out = new(Firmware)
-			**out = **in
+			(*in).DeepCopyInto(*out)
 		}
 	}
 	if in.Clock != nil {
@@ -550,15 +566,6 @@ func (in *DomainSpec) DeepCopyInto(out *DomainSpec) {
 			**out = **in
 		}
 	}
-	if in.Bootloader != nil {
-		in, out := &in.Bootloader, &out.Bootloader
-		if *in == nil {
-			*out = nil
-		} else {
-			*out = new(Bootloader)
-			(*in).DeepCopyInto(*out)
-		}
-	}
 	return
 }
 
@@ -568,6 +575,31 @@ func (in *DomainSpec) DeepCopy() *DomainSpec {
 		return nil
 	}
 	out := new(DomainSpec)
+	in.DeepCopyInto(out)
+	return out
+}
+
+// DeepCopyInto is an autogenerated deepcopy function, copying the receiver, writing into out. in must be non-nil.
+func (in *EFI) DeepCopyInto(out *EFI) {
+	*out = *in
+	if in.Secure != nil {
+		in, out := &in.Secure, &out.Secure
+		if *in == nil {
+			*out = nil
+		} else {
+			*out = new(bool)
+			**out = **in
+		}
+	}
+	return
+}
+
+// DeepCopy is an autogenerated deepcopy function, copying the receiver, creating a new EFI.
+func (in *EFI) DeepCopy() *EFI {
+	if in == nil {
+		return nil
+	}
+	out := new(EFI)
 	in.DeepCopyInto(out)
 	return out
 }
@@ -858,6 +890,15 @@ func (in *Features) DeepCopy() *Features {
 // DeepCopyInto is an autogenerated deepcopy function, copying the receiver, writing into out. in must be non-nil.
 func (in *Firmware) DeepCopyInto(out *Firmware) {
 	*out = *in
+	if in.Bootloader != nil {
+		in, out := &in.Bootloader, &out.Bootloader
+		if *in == nil {
+			*out = nil
+		} else {
+			*out = new(Bootloader)
+			(*in).DeepCopyInto(*out)
+		}
+	}
 	return
 }
 
